[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/dinner_time/dinner_time_overlay.gd" id="1_dinner"]

[node name="DinnerTimeOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dinner")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 50.0
grow_horizontal = 2
alignment = 1
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
text = "晚餐时间"

[node name="ProgressLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "进度: 0 / 0"

[node name="CenterPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderLabel" type="Label" parent="CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "待处理订单"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OrdersContainer" type="VBoxContainer" parent="CenterPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -60.0
offset_right = 130.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 20

[node name="AutoButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "自动: 关"

[node name="NextButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "下一个"
